--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "express": "~4.16.1",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
